--- a/app/src/main/res/layout/fragment_bookings_cancelled_transport.xml
+++ b/app/src/main/res/layout/fragment_bookings_cancelled_transport.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.transport.bookings.BookingsConfirmedTransportFragment">
+    tools:context=".ui.fragments.transport.bookings.BookingsCancelledTransportFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:layout_centerInParent="true"
             android:drawableTop="@drawable/ic_icon_sad_100"
             android:fontFamily="@font/lato"
-            android:text="No confirmed bookings found."
+            android:text="No cancelled bookings found."
             android:textColor="@color/textColor"
             android:textSize="16sp"
             android:visibility="visible" />
