--- a/app/src/main/res/layout/booking_transport_cancelled_item_layout.xml
+++ b/app/src/main/res/layout/booking_transport_cancelled_item_layout.xml
@@ -204,6 +204,20 @@
                         android:layout_height="6dp" />
 
                     <TextView
+                        android:id="@+id/labelRemarks"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/lato"
+                        android:text="Remarks:"
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp" />
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="6dp" />
+
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
@@ -320,6 +334,20 @@
                         android:ellipsize="end"
                         android:fontFamily="@font/lato"
                         android:maxLines="1"
+                        android:text=""
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp" />
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="6dp" />
+
+                    <TextView
+                        android:id="@+id/bookingRemarks"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/lato"
                         android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
